@@ -21,6 +21,10 @@ import java.nio.file.Paths;
 import java.util.*;
 
 /**
+ * Tests for easy version
+ * of <a href="https://www.kgeorgiy.info/courses/java-advanced/homeworks.html#homework-walk">Walk</a> homework
+ * for <a href="https://www.kgeorgiy.info/courses/java-advanced/">Java Advanced</a> course.
+ *
  * @author Georgiy Korneev (kgeorgiy@kgeorgiy.info)
  */
 @FixMethodOrder(MethodSorters.NAME_ASCENDING)
@@ -74,6 +78,52 @@ public class WalkTest extends BaseTest {
         test(randomFiles(10, 1_000_000));
     }
 
+    @Test
+    public void test08_chineseSupport() throws IOException {
+        final String alphabet = ALPHABET;
+        ALPHABET = "\u8acb\u554f\u4f60\u7684\u7a0b\u5e8f\u652f\u6301\u4e2d\u570b";
+        test(randomFiles(10, 100));
+        ALPHABET = alphabet;
+    }
+
+    @Test
+    public void test09_noInput() {
+        runRaw(randomFileName(), randomFileName());
+    }
+
+    @Test
+    public void test10_invalidInput() {
+        runRaw("/", randomFileName());
+        runRaw("\0*", randomFileName());
+    }
+
+    @Test
+    public void test11_invalidOutput() throws IOException {
+        final String input = createEmptyFile(name.getMethodName());
+        runRaw(input, "/");
+        runRaw(input, "\0*");
+        final String file = createEmptyFile(name.getMethodName());
+        runRaw(input, file + "/" + randomFileName());
+    }
+
+    @Test
+    public void test12_singleArgument() throws IOException {
+        runRaw(createEmptyFile(name.getMethodName()));
+    }
+
+    @Test
+    public void test13_veryLargeFile() throws IOException {
+        test(randomFiles(1, 100_000_00));
+    }
+
+    @Test
+    public void test14_invalidFiles() throws IOException {
+        final String alphabet = ALPHABET;
+        ALPHABET = "\0\\*";
+        test(randomFiles(1, 10));
+        ALPHABET = alphabet;
+    }
+
     private String createEmptyFile(final String name) throws IOException {
         final Path input = DIR.resolve(name);
         Files.write(input, new byte[0]);
@@ -88,7 +138,7 @@ public class WalkTest extends BaseTest {
         final Path inputFile = DIR.resolve(name.getMethodName() + ".in");
         final Path outputFile = DIR.resolve(name.getMethodName() + ".out");
         try {
-            Files.write(inputFile, generateInput(inputs).getBytes("UTF-8"));
+            Files.writeString(inputFile, generateInput(inputs));
         } catch (final IOException e) {
             throw new AssertionError("Cannot write input file " + inputFile);
         }
